--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-icons": "~2.2.7",
+    "react-player": "~1.5.0",
     "spectacle-scripts": "2.0.0"
   },
   "scripts": {
